# debate

./: .gitignore  LICENSE  PROTOCOL.md  README.md  pyproject.toml  watcher.example.json
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
collab/: CHANNEL.md  PROTOCOL.md  debate.json
collab/archive/: CHANNEL-2026-07.md  INDEX.md
docs/: HANDOVER-SESSION-2.md  case-study.md
docs/plans/: 2026-07-15-reliability-hardening-plan.md  2026-07-15-reliability-hardening.md  2026-07-15-skill-distribution-research.md  2026-07-16-anti-encapsulation.md  2026-07-17-cross-vendor-review-benchmark-pilot.md  2026-07-17-glm-reviewer-seat.md
examples/: claude-code.md  demo.py  glm-kimi.md
skills/debate/: SKILL.md
src/debate/: __init__.py  __main__.py  channel.py  watcher.py
tests/: test_channel.py  test_cli_status.py  test_cli_watch.py  test_housekeeping.py  test_release_sync.py  test_watcher.py
