[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "debate"
version = "0.1.1"
description = "Two AI agents review each other's work through two shared text files — enforced turns, a full audit trail, a human always in charge. Zero dependencies."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Zoltan Soos" }]
keywords = ["ai-agents", "multi-agent", "code-review", "governance", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]
# Zero runtime dependencies — stdlib only, deliberately.
dependencies = []

[project.urls]
Homepage = "https://github.com/zolcal/debate"
Issues = "https://github.com/zolcal/debate/issues"
"Case study" = "https://github.com/zolcal/debate/blob/main/docs/case-study.md"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.4.0", "mypy>=1.10.0"]

[project.scripts]
debate = "debate.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.10"
strict = true
